added the correct links for the nav

--- a/blog/templates/blog/post_layout.html
+++ b/blog/templates/blog/post_layout.html
@@ -16,11 +16,17 @@
       <div class="nav-links">
         <!-- Make the contact display a pop up showing all the contacts -->
         <!-- Add link for the shop and blog for later -->
-        <a href="index.html" class="nav-link">HOME</a>
+        <a href="https://friendsoffuo.netlify.app/" class="nav-link">HOME</a>
         <a href="#about-section" class="nav-link">ABOUT</a>
-        <a href="" class="nav-link blog-link">BLOG</a>
-        <a href="" class="nav-link">SHOP</a>
-        <p href="" class="nav-link">CONTACT</p>
+        <a
+          href="https://friends-of-fuo-backend.onrender.com/blog/"
+          class="nav-link blog-link"
+          >BLOG</a
+        >
+        <a href="https://selar.com/m/friends-of-fuo-2-inc1" class="nav-link"
+          >SHOP</a
+        >
+        <p href="" class="nav-link contact-link">CONTACT</p>
       </div>
       <div class="nav-buttons">
         <a href="" class="button donate-button">DONATE</a>
@@ -35,11 +41,21 @@
       <div class="close-button">
         <img src="./icons/close-icon-black.png" alt="close-button" />
       </div>
-      <a href="index.html" class="nav-link">HOME</a>
+      <a href="https://friendsoffuo.netlify.app/" class="nav-link">HOME</a>
       <a href="#about-section" class="nav-link">ABOUT</a>
-      <a href="" class="nav-link">BLOG</a>
-      <a href="" class="nav-link">SHOP</a>
+      <a
+        href="https://friends-of-fuo-backend.onrender.com/blog/"
+        class="nav-link"
+        >BLOG</a
+      >
+      <a href="https://selar.com/m/friends-of-fuo-2-inc1" class="nav-link"
+        >SHOP</a
+      >
       <p href="" class="nav-link">CONTACT</p>
+    </div>
+    <div class="contact-pop-up">
+      <p>Email: email@website.com</p>
+      <p>Phone: +233 123 456 789</p>
     </div>
     {% block main %}{% endblock %}
   </body>
