added _black to the shop link

--- a/blog/templates/blog/post_layout.html
+++ b/blog/templates/blog/post_layout.html
@@ -23,7 +23,10 @@
           class="nav-link blog-link"
           >BLOG</a
         >
-        <a href="https://selar.com/m/friends-of-fuo-2-inc1" class="nav-link"
+        <a
+          href="https://selar.com/m/friends-of-fuo-2-inc1"
+          class="nav-link"
+          target="_blank"
           >SHOP</a
         >
         <p href="" class="nav-link contact-link">CONTACT</p>
@@ -48,7 +51,10 @@
         class="nav-link"
         >BLOG</a
       >
-      <a href="https://selar.com/m/friends-of-fuo-2-inc1" class="nav-link"
+      <a
+        href="https://selar.com/m/friends-of-fuo-2-inc1"
+        class="nav-link"
+        target="_blank"
         >SHOP</a
       >
       <p href="" class="nav-link">CONTACT</p>
