--- a/blog/templates/blog/post_layout.html
+++ b/blog/templates/blog/post_layout.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'styles/layout.css' %}" />
-    <script src="{% static 'scripts/layout.js'%}"></script>
+    <script src="{% static 'scripts/layout.js'%} defer"></script>
     {% block head %}{% endblock %}
   </head>
   <body>
