--- a/staticfiles/styles/layout.css
+++ b/staticfiles/styles/layout.css
@@ -42,8 +42,7 @@ nav {
   width: 3em;
 }
 
-.hidden-menu,
-.pop-up-window-hidden {
+.hidden-menu {
   transform: translateX(200em);
   display: flex;
   flex-direction: column;
@@ -85,6 +84,8 @@ nav {
 }
 .nav-link {
   color: black;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
 }
 
 body {
@@ -124,6 +125,9 @@ body {
     width: 100vw;
     align-items: center;
     padding: 1em 4em;
+  }
+  .nav-link:hover {
+    transform: scaleX(1.2);
   }
   .hidden-menu {
     display: none;
